 - GBA: Add API for getting Configuration structs for overrides and input
 - GBA: Refactor gba-sensors and gba-gpio into gba-hardware
 - GBA: Refactor gba directory, dropping gba- prefix and making supervisor directory
 - Debugger: Add support for soft breakpoints
 - Util: Use proper locale for reading and writing float values
 - Debugger: Make I/O register names be addresses instead of values

0.1.1: (2015-01-24)
Bugfixes:
 - ARM7: Fix LDM writeback to a register already written
 - GBA: Fix timers 2 and 3 updating incorrectly
 - GBA Audio: Make larger buffer sizes than 2048 actually work properly
 - GBA Audio: Fix GB audio channels being too quiet (fixes #159)
 - GBA Audio: Properly initialize audio FIFO channels
 - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
 - GBA BIOS: Fix BIOS prefetch after returning from a SWI
 - GBA BIOS: Fix LZ77UnCompVram to use 16-bit loads from decompressed memory
 - GBA BIOS: Fix HuffUnComp to work when games pass an invalid bit length
 - GBA BIOS: Fix GetBiosChecksum to return the value of a real GBA, regardless of used BIOS
 - GBA BIOS: Fix HuffUnComp boundary conditions
 - GBA Memory: Don't call into GPIO write calls if GPIO devices are absent
 - GBA Memory: Properly initialize 1 Mb flash, and add debug logging
 - GBA Memory: Filter out top nybble of DMA addresses
 - GBA Memory: Properly bounds-check VRAM accesses
 - GBA Memory: Fix initial DMA state
 - GBA Thread: Allow halted games to exit cleanly
 - GBA Video: Fix blend issues with obscured middle layers
 - GBA Video: Fix windows not disabling target 1 appropriately (fixes #161)
 - GBA Video: Fix sprite mis-ordering behavior in some cases (fixes #168)
 - GBA Video: Fix window interactions with 16-color mode 0 mosaic
 - GBA Video: Fix sprite boundary conditions with mosaic
 - GBA Video: Fix mode 0 being able to read tiles above appropriate tile range
 - Qt: Fix issue with set frame sizes being the wrong height