@@ -79,16 +79,16 @@ static struct CLIDebuggerCommandSummary _debuggerCommands[] = {
 	{ "print/x", _printHex, CLIDVParse, "Print a value as hexadecimal" },
 	{ "q", _quit, 0, "Quit the emulator" },
 	{ "quit", _quit, 0, "Quit the emulator"  },
-	{ "rb", _readByte, CLIDVParse, "Read a byte from a specified offset" },
 	{ "reset", _reset, 0, "Reset the emulation" },
-	{ "rh", _readHalfword, CLIDVParse, "Read a halfword from a specified offset" },
-	{ "rw", _readWord, CLIDVParse, "Read a word from a specified offset" },
+	{ "r/1", _readByte, CLIDVParse, "Read a byte from a specified offset" },
+	{ "r/2", _readHalfword, CLIDVParse, "Read a halfword from a specified offset" },
+	{ "r/4", _readWord, CLIDVParse, "Read a word from a specified offset" },
 	{ "status", _printStatus, 0, "Print the current status" },
 	{ "w", _setWatchpoint, CLIDVParse, "Set a watchpoint" },
 	{ "watch", _setWatchpoint, CLIDVParse, "Set a watchpoint" },
-	{ "wb", _writeByte, CLIDVParse, "Write a byte at a specified offset" },
-	{ "wh", _writeHalfword, CLIDVParse, "Write a halfword at a specified offset" },
-	{ "ww", _writeWord, CLIDVParse, "Write a word at a specified offset" },
+	{ "w/1", _writeByte, CLIDVParse, "Write a byte at a specified offset" },
+	{ "w/2", _writeHalfword, CLIDVParse, "Write a halfword at a specified offset" },
+	{ "w/4", _writeWord, CLIDVParse, "Write a word at a specified offset" },
 	{ "x", _breakInto, 0, "Break into attached debugger (for developers)" },
 	{ 0, 0, 0, 0 }
 };
